kustomize/bases/rancher/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher
  labels:
    app: rancher
  # annotations:
  #   nginx.ingress.kubernetes.io/ssl-redirect: "false" # turn off ssl redirect for external.
spec:
  rules:
  - host: rancher.internal
    http:
      paths:
      - backend:
          service:
            name: rancher
            port:
              number: 80
        pathType: ImplementationSpecific
        path: "/"
